syntax = "proto3";
option go_package = "github.com/celer-network/goCeler/sgn";

import "google/protobuf/descriptor.proto";
// import "github.com/celer-network/goCeler/entity";  // for AccountAmtPair msg

package sgn;

extend google.protobuf.FieldOptions { string soltype = 1004; }

/********** mainchain only **********/
// Next Tag: 3
message PenaltyRequest {
  // serialized PenaltyInfo message
  bytes penaltyInfo = 1;
  // TODO: do we need an ordered sigs?
  repeated bytes sigs = 2;
}

/********** mainchain and sidechain **********/
// Next Tag: 4
message PenaltyInfo {
  uint64 nonce = 1;
  repeated Penalty penalties = 2;
  uint64 expireTime = 3;
}

// Next Tag: 4
message Penalty {
  bytes validator_address = 1 [ (soltype) = "address" ];
  bytes delegator_address = 2 [ (soltype) = "address" ];
  repeated AccountAmtPair beneficiaries = 3;
}

// Next Tag: 3
message AccountAmtPair {
  bytes account = 1 [(soltype) = "address"];
  bytes amt = 2 [(soltype) = "uint256"];
}
